--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -193,7 +193,6 @@ a {
   font-size: 1.5rem;
   height: 24px;
   width: 24px;
- 
 }
 
 /*Active link*/
@@ -487,7 +486,7 @@ a {
 
 }
 
-/* =========== Service onClick Page change block ============ */
+/* =========== Service onClick Page change block============ */
 .service__block {
 
   display: flex;
@@ -515,7 +514,7 @@ a {
 .service__img {
   height: 12rem;
   width: 20rem;
-  margin: 1rem auto;
+  margin: auto;
 }
 
 .service__section {
@@ -671,5 +670,3 @@ h2{
    
   transform: scale(1.1);
 }
-
-
