--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -70,11 +70,15 @@ a {
   padding: 1rem 0 2rem;
 }
 
+
+
 .section__title {
   font-size: var(--h1-font-size);
   color: var(--title-color);
   text-align: center;
   margin-bottom: 1.5rem;
+  /* margin-top:-100px; */
+
 }
 
 .section__height {
@@ -222,6 +226,10 @@ a {
 /*=============== MEDIA QUERIES ===============*/
 /* For small devices */
 /* Remove if you choose, the minimalist design */
+
+
+
+
 @media screen and (max-width: 320px) {
   .nav__name {
     display: none;
