--- a/templates/index.html
+++ b/templates/index.html
@@ -17,123 +17,144 @@
 
 <style>
     /* css for home image slider starts here */
-    .slider-container {
-        margin-top: 10px;
-        padding: 0;
-        margin: auto;
-        /* height: 100vh; */
-        display: flex;
-        width: 800px;
-        justify-content: center;
-        align-items: center;
-        background: #23E3C9;
+   
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.slider-container{
+  height: 85vh;
+  width : 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+ 
+  /* background: #1D212B; */
+}
+
+.img-slider{
+  position: relative;
+  width: 800px;
+  height: 450px;
+  /* margin: 10px; */
+  /* background: #1D212B; */
+  margin-top:-80px;
+}
+
+.img-slider .slide{
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  clip-path: circle(0% at 0 50%);
+}
+
+.img-slider .slide.active{
+  clip-path: circle(150% at 0 50%);
+  transition: 2s;
+  transition-property: clip-path;
+}
+
+.img-slider .slide img{
+  z-index: 1;
+  width: 100%;
+  border-radius: 5px;
+  /* height: 80vh; */
+}
+
+
+.img-slider .navigation{
+  z-index: 2;
+  position: absolute;
+  display: flex;
+  bottom: -70px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.img-slider .navigation .btn{
+  background: rgba(255, 255, 255, 0.5);
+  width: 12px;
+  height: 12px;
+  margin: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.img-slider .navigation .btn.active{
+  background: #2696E9;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+}
+
+@media (max-width: 820px){
+
+    .slider-container{
+        height: 85vh;
     }
+  .img-slider{
+    
 
-    .slider {
-        width: 800px;
-        height: 500px;
-        border-radius: 10px;
-        overflow: hidden;
+    width: 600px;
+    height: 375px;
+  }
+
+
+
+  .img-slider .navigation{
+    bottom: -15px;
+  }
+
+  .img-slider .navigation .btn{
+    width: 10px;
+    height: 10px;
+    margin: 8px;
+  }
+}
+
+@media (max-width: 620px){
+
+    .slider-container{
+        height: 58vh;
     }
+  .img-slider{
+    width: 400px;
+    height: 250px;
+    margin-top: -20px;
+  }
 
-    .slides {
-        width: 500%;
-        height: 500px;
-        display: flex;
+
+  .img-slider .navigation{
+    bottom: -10px;
+  }
+
+  .img-slider .navigation .btn{
+    width: 8px;
+    height: 8px;
+    margin: 6px;
+  }
+}
+
+@media (max-width: 420px){
+
+    .slider-container{
+        height: 45vh;
     }
+  .img-slider{
+    width: 320px;
+    height: 200px;
+    margin-top: -10px;
+  }
 
-    .slides input {
-        display: none;
-    }
 
-    .slide {
-        width: 20%;
-        transition: 2s;
-    }
-
-    .slide img {
-        width: 800px;
-        height: 500px;
-    }
-
-    /*css for manual slide navigation*/
-
-    .navigation-manual {
-        position: absolute;
-        width: 800px;
-        margin-top: -40px;
-        display: flex;
-        justify-content: center;
-    }
-
-    .manual-btn {
-        border: 2px solid #40D3DC;
-        padding: 5px;
-        border-radius: 20px;
-        cursor: pointer;
-        transition: 1s;
-    }
-
-    .manual-btn:not(:last-child) {
-        margin-right: 40px;
-    }
-
-    .manual-btn:hover {
-        background: #40D3DC;
-    }
-
-    #radio1:checked~.first {
-        margin-left: 0;
-    }
-
-    #radio2:checked~.first {
-        margin-left: -20%;
-    }
-
-    #radio3:checked~.first {
-        margin-left: -40%;
-    }
-
-    #radio4:checked~.first {
-        margin-left: -60%;
-    }
-
-    /*css for automatic navigation*/
-
-    .navigation-auto {
-        position: absolute;
-        display: flex;
-        width: 800px;
-        justify-content: center;
-        margin-top: 460px;
-    }
-
-    .navigation-auto div {
-        border: 2px solid #40D3DC;
-        padding: 5px;
-        border-radius: 10px;
-        transition: 1s;
-    }
-
-    .navigation-auto div:not(:last-child) {
-        margin-right: 40px;
-    }
-
-    #radio1:checked~.navigation-auto .auto-btn1 {
-        background: #40D3DC;
-    }
-
-    #radio2:checked~.navigation-auto .auto-btn2 {
-        background: #40D3DC;
-    }
-
-    #radio3:checked~.navigation-auto .auto-btn3 {
-        background: #40D3DC;
-    }
-
-    #radio4:checked~.navigation-auto .auto-btn4 {
-        background: #40D3DC;
-    }
+  .img-slider .navigation{
+    bottom: -10px;
+  }
+}
+      
+      
 </style>
 
 <body>
@@ -145,55 +166,42 @@
         <!--=============== HOME ===============-->
         <section class="container section section__height" id="home">
             <h2 class="section__title">Welcome </h2>
-
+  
+  
+            <!-- image slider starts here -->
 
             <div class="slider-container">
+             <div class="img-slider">
+      <div class="slide active">
+        <img src={% static 'assets/freeImg/1.jpeg' %} alt="">
+      </div>
+      <div class="slide">
+        <img src={% static 'assets/freeImg/2.jpeg' %} alt="">
+        
+      </div>
+      <div class="slide">
+        <img src={% static 'assets/freeImg/3.jpeg' %} alt="">
+        
+      </div>
+      <div class="slide">
+        <img src={% static 'assets/freeImg/4.jpeg' %} alt="">
+        
+      </div>
+      <div class="slide">
+        <img src={% static 'assets/freeImg/5.jpeg' %} alt="">
+    
+      </div>
+      <div class="navigation">
+        <div class="btn active"></div>
+        <div class="btn"></div>
+        <div class="btn"></div>
+        <div class="btn"></div>
+        <div class="btn"></div>
+      </div>
+    </div>
+</div>
 
-
-                <!--image slider start-->
-                <div class="slider">
-                    <div class="slides">
-                        <!--radio buttons start-->
-                        <input type="radio" name="radio-btn" id="radio1">
-                        <input type="radio" name="radio-btn" id="radio2">
-                        <input type="radio" name="radio-btn" id="radio3">
-                        <input type="radio" name="radio-btn" id="radio4">
-                        <!--radio buttons end-->
-                        <!--slide images start-->
-                        <div class="slide first">
-                            <img src={% static 'assets/freeImg/1.jpeg' %} alt="">
-                        </div>
-                        <div class="slide">
-                            <img src={% static 'assets/freeImg/2.jpeg' %} alt="">
-                        </div>
-                        <div class="slide">
-                            <img src={% static 'assets/freeImg/3.jpeg' %} alt="">
-                        </div>
-                        <div class="slide">
-                            <img src={% static 'assets/freeImg/4.jpeg' %} alt="">
-                        </div>
-                        <!--slide images end-->
-                        <!--automatic navigation start-->
-                        <div class="navigation-auto">
-                            <div class="auto-btn1"></div>
-                            <div class="auto-btn2"></div>
-                            <div class="auto-btn3"></div>
-                            <div class="auto-btn4"></div>
-                        </div>
-                        <!--automatic navigation end-->
-                    </div>
-                    <!--manual navigation start-->
-                    <div class="navigation-manual">
-                        <label for="radio1" class="manual-btn"></label>
-                        <label for="radio2" class="manual-btn"></label>
-                        <label for="radio3" class="manual-btn"></label>
-                        <label for="radio4" class="manual-btn"></label>
-                    </div>
-                    <!--manual navigation end-->
-                </div>
-                <!--image slider end-->
-
-
+            <!-- image slider ends here -->
 
 
         </section>
@@ -237,6 +245,7 @@
 
     <!--=============== MAIN JS ===============-->
     <script src={% static 'assets/js/main.js' %}></script>
+    
 
 
 </body>
