--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                     <div class="left__block">
                         <h2 class="font_black">{{data.product.name}}</h2>
                         <h3 class="font_black">Rs. {{data.product.price}}</h3>
-                        <span>{{data.product.dis}}</span>
+                        <span>{{data.product.dis | safe}}</span>
                     </div>
                     <div class="right__block">
 
