--- a/templates/indexShop.html
+++ b/templates/indexShop.html
@@ -42,7 +42,7 @@
                     <div class="left__block">
                         <h2 class="value__search">{{data.product.name}}</h2>
                         <h3>Rs. {{data.product.price}}</h3>
-                        <span>{{data.product.dis}}</span>
+                        <span>{{data.product.dis | safe }}</span>
                     </div>
                     <div class="right__block">
 
