--- a/templates/indexAbout.html
+++ b/templates/indexAbout.html
@@ -33,27 +33,27 @@
             </div>
             <div class="about__bottom">
                 <h2 class="bottom__iterms">About us</h2>
-                <span class="bottom__iterms">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias consectetur, nam o
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae sunt, libero quia rerum unde perferendis
-                    laboriosam cumque eum voluptatem nemo facilis mollitia quas neque necessitatibus commodi rem eos. Nihil
-                    nostrum facere magni beatae autem! dit voluptatum, impedit exercitationem dolor dignissimos dicta tenetur
-                    voluptatibus ea dolore perferendis necessitatibus?</span>
+                <span class="bottom__iterms">Welcome to our car washing company! We are a team of dedicated professionals who have a passion for providing the best car washing services to our customers. Our company was founded with a mission to offer exceptional quality and convenience to car owners who want to maintain the appearance of their vehicles.
+
+                    At our company, we understand the importance of having a clean car. Not only does it enhance the overall look of your vehicle, but it also helps to maintain its value. With this in mind, we have designed a range of car washing services that cater to the needs of all types of vehicles. Whether you drive a small car, a luxury SUV, or a commercial vehicle, we have the expertise to ensure that your vehicle looks its best.</span>
 
                 <h2 class="bottom__iterms">How we works ?</h2>
-                <span class="bottom__iterms">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias consectetur, nam o
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae sunt, libero quia rerum unde perferendis
-                    laboriosam cumque eum voluptatem nemo facilis mollitia quas neque necessitatibus commodi rem eos. Nihil
-                    nostrum facere magni beatae autem! dit voluptatum, impedit exercitationem dolor dignissimos dicta tenetur
-                    voluptatibus ea dolore perferendis necessitatibus?</span>
+                <span class="bottom__iterms">At our car washing company, we understand that our customers lead busy lives and may not always have the time to visit a car wash. This is why we offer doorstep car washing services, where we come to your location and wash your car on-site. Here is how we do car washing at your doorstep:
+
+                    First, you can book an appointment for our doorstep car washing service by contacting us via phone, email, or our website. We will schedule a convenient time for our team to come to your location.
+                    
+                    When our team arrives, they will assess your car's condition and discuss any specific requirements you may have. They will then set up all the necessary equipment, including water supply, hoses, and cleaning products.</span>
                 
 
                 <h2 class="bottom__iterms">Service Details </h2>
-                <span class="bottom__iterms">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias consectetur, nam o
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae sunt, libero quia rerum unde perferendis
-                    laboriosam cumque eum voluptatem nemo facilis mollitia quas neque necessitatibus commodi rem eos. Nihil
-                    nostrum facere magni beatae autem! dit voluptatum, impedit exercitationem dolor dignissimos dicta tenetur
-                    voluptatibus ea dolore perferendis necessitatibus?</span>
-                <h3 class="bottom__iterms">Only in Nagpur City</h3>
+                <span class="bottom__iterms">Our car washing company provides a wide range of services to meet the needs of every customer. Our goal is to ensure that your vehicle looks as good as new, no matter its age or condition. Our services include exterior and interior detailing, hand washing, and waxing.
+
+                    Our exterior detailing service includes a thorough wash, polish, and wax to bring out the shine in your vehicle's paint. We use high-quality cleaning products and techniques to remove dirt, grime, and other contaminants that can dull your car's finish. We also offer clay bar treatments to remove embedded contaminants that regular washing can't get rid of.
+                    
+                    Our interior detailing service includes a deep cleaning of the entire interior of your vehicle, including the dashboard, seats, and carpets. We use specialized cleaning products and techniques to remove stains, odors, and dirt that can accumulate over time. Our team will leave your vehicle looking and smelling fresh and clean.
+                    
+                    We also offer hand washing services for those who prefer a gentle touch on their vehicles. Our hand washing service uses a soft microfiber wash mitt to gently clean your vehicle without scratching the paint.</span>
+               
 
               
 
