--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -67,7 +67,8 @@ a {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .section {
-  padding: 1rem 0 2rem;
+  padding: 1rem 0 2rem 0;
+  /* font-size: 3rem; */
 }
 
 
@@ -76,8 +77,11 @@ a {
   font-size: var(--h1-font-size);
   color: var(--title-color);
   text-align: center;
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
+  margin: 1.5rem auto;
   /* margin-top:-100px; */
+  font-family: 'Montserrat';
+  font-size: 2.3rem;
 
 }
 
@@ -89,9 +93,10 @@ a {
 .container {
   max-width: auto;
   max-width: 90%;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  /* margin-left: 1rem;
+  margin-right: 1rem; */
   /* border:  2px solid black; */
+  margin:  auto;
 }
 
 /*=============== HEADER ===============*/
@@ -398,11 +403,23 @@ a {
 }
 
 /* >>>>>>>>>>>>>>>>>Top Sell<<<<<<<<<<<<<<<<<<<< */
+/* show more */
+.hide{
+  /* display: none; */
+  display: none;
+}
+.readmore__btn{
+  background-color: #FFF;
+  border: none;
+  margin: 0.3rem 0;
+  font-weight: bold;
+}
 .shop__flex {
   display: flex;
-  padding: 4rem 0 2rem 0;
+  padding: 3rem 0 2rem 0;
   flex-direction: row;
-  border-bottom: 2px solid gray;
+  border-bottom: 2px solid rgb(0, 0, 0);
+  /* check */
 
 
 }
@@ -464,6 +481,9 @@ a {
   color: black;
   margin: 0.2rem auto;
 
+}
+.font_black:hover{
+  cursor: pointer;
 }
 
 /* ============= footer ================== */
@@ -613,9 +633,9 @@ background-color: 	#F0F0F0;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(216, 209, 216);
+  background-color:rgb(223, 223, 223);
   text-align: center;
-  margin: 2rem;
+  /* margin: 2rem; */
 }
 
 .about__logo__img1 {
@@ -644,7 +664,7 @@ background-color: 	#F0F0F0;
 }
 
 .bottom__iterms {
-  margin: 0.5rem 0.7rem;
+  margin: 0.8rem 0.7rem;
 }
 h2{
   color: black;
