p__update in shop iterm

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,7 @@
         <a href="#"></a><img class="footer__logo" src={% static 'assets/img/github-logo-24.png' %} alt=""> </a>
     </div>
     <div class="copyright__block">
-        @ copyright 2023
+        @ copyright eMechanic 2023
     </div>
 </footer>
 
