--- a/templates/indexShop.html
+++ b/templates/indexShop.html
@@ -38,7 +38,7 @@
                 
                 {% for data in allData %}  
 
-                <section class="shop__flex">
+                <section class="shop__flex__shop">
                     <div class="left__block">
                         <h2 class="value__search">{{data.product.name}}</h2>
                         <h3>Rs. {{data.product.price}}</h3>
