--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -182,6 +182,16 @@ a {
   
 }
 
+/* apply this css in if else conditon with url ex. /service */
+/* .nav__link__active {
+  
+  flex-direction: column;
+  align-items: center;
+  row-gap: 4px;
+  color: var(--first-color);
+  fill: var(--first-color) ;
+  font-weight: 600;
+} */
 
 .nav__link:focus {
   color: var(--first-color);
@@ -416,10 +426,27 @@ a {
 }
 .shop__flex {
   display: flex;
-  padding: 3rem 0 2rem 0;
+  padding: 3rem 10px 2rem 10px;
   flex-direction: row;
   border-bottom: 2px solid rgb(0, 0, 0);
-  /* check */
+  background: #FFF;
+  margin: 1rem;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 5px black;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+
+}
+.shop__flex__shop {
+  display: flex;
+  padding: 3rem 10px 2rem 10px;
+  flex-direction: row;
+  border-bottom: 2px solid rgb(0, 0, 0);
+  background: #FFF;
+  margin: 3rem auto; 
+  border-radius: 1rem;
+  box-shadow: 0px 0px 5px black;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 
 }
@@ -636,6 +663,7 @@ background-color: 	#F0F0F0;
   background-color:rgb(223, 223, 223);
   text-align: center;
   /* margin: 2rem; */
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .about__logo__img1 {
@@ -685,6 +713,8 @@ h2{
 
 
 }
+
+
 .contact__lower{
   display: flex;
   flex-direction: column;
