--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -181,7 +181,9 @@ a {
  
   
 }
-
+/* ##################################################### */
+/* ##################################################### */
+/* ##################################################### */
 /* apply this css in if else conditon with url ex. /service */
 /* .nav__link__active {
   
@@ -426,11 +428,11 @@ a {
 }
 .shop__flex {
   display: flex;
-  padding: 3rem 10px 2rem 10px;
+  padding: 2rem 0.7rem;
   flex-direction: row;
   border-bottom: 2px solid rgb(0, 0, 0);
   background: #FFF;
-  margin: 1rem;
+  margin: 1rem auto;
   border-radius: 1rem;
   box-shadow: 0px 0px 5px black;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -663,7 +665,7 @@ background-color: 	#F0F0F0;
   background-color:rgb(223, 223, 223);
   text-align: center;
   /* margin: 2rem; */
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .about__logo__img1 {
