about page done with css

--- a/templates/indexAbout.html
+++ b/templates/indexAbout.html
@@ -23,41 +23,149 @@
     <main>
         <!--=============== HOME ===============-->
         <section class="container section section__height" id="home">
+  
+            <div class="about_container">
 
-            <div class="about__contain">
-                <img class="about__logo__img1" src={% static 'assets/img/logo.jpg' %} alt="">
-                <h2>eMechanic</h2>
-                <span>"It’s the fastest way to make your car look amazing and it’s easier than you think."</span>
-                <img class="about__logo__img2" src={% static 'assets/img/greeting-g435723ea6_640.png' %} alt="">
-                
-            </div>
-            <div class="about__bottom">
-                <h2 class="bottom__iterms">About us</h2>
-                <span class="bottom__iterms">Welcome to our car washing company! We are a team of dedicated professionals who have a passion for providing the best car washing services to our customers. Our company was founded with a mission to offer exceptional quality and convenience to car owners who want to maintain the appearance of their vehicles.
+                <div class="about__side">
+                    <img class="about__logo__img1" src={% static 'assets/img/logo.jpg' %} alt="">
+                    <h2>eMechanic</h2>
+                    <p>"It’s the fastest way to make your car look amazing and it’s easier than you think."</p>
+                    
+                    
+                </div>
+            
+            <div class="about-info">
+                <h2 class="about__title">About us</h2>
+                <span>Welcome to our car washing company! We are a team of dedicated professionals who have a passion for providing the best car washing services to our customers. Our company was founded with a mission to offer exceptional quality and convenience to car owners who want to maintain the appearance of their vehicles.
 
                     At our company, we understand the importance of having a clean car. Not only does it enhance the overall look of your vehicle, but it also helps to maintain its value. With this in mind, we have designed a range of car washing services that cater to the needs of all types of vehicles. Whether you drive a small car, a luxury SUV, or a commercial vehicle, we have the expertise to ensure that your vehicle looks its best.</span>
 
-                <h2 class="bottom__iterms">How we works ?</h2>
+                    <hr style="width:2rem; background-color: black; height: 0.2rem; margin: 1rem;">
+                </div>
+                
+                </div>
+
+      
+                <hr style="margin:1rem; background-color:grey; height: 0.1rem;">
+                
+            <div class="about_container">
+
+               <div class="about-info"> 
+
+                <h2 class="about__title">How we works ?</h2>
                 <span class="bottom__iterms">At our car washing company, we understand that our customers lead busy lives and may not always have the time to visit a car wash. This is why we offer doorstep car washing services, where we come to your location and wash your car on-site. Here is how we do car washing at your doorstep:
 
                     First, you can book an appointment for our doorstep car washing service by contacting us via phone, email, or our website. We will schedule a convenient time for our team to come to your location.
                     
                     When our team arrives, they will assess your car's condition and discuss any specific requirements you may have. They will then set up all the necessary equipment, including water supply, hoses, and cleaning products.</span>
-                
+                    <hr style="width:2rem; background-color: black; height: 0.2rem; margin: 1rem;">
+                 
+                  </div>
 
-                <h2 class="bottom__iterms">Service Details </h2>
-                <span class="bottom__iterms">Our car washing company provides a wide range of services to meet the needs of every customer. Our goal is to ensure that your vehicle looks as good as new, no matter its age or condition. Our services include exterior and interior detailing, hand washing, and waxing.
+                  <div  id="how-side" class="about__side how-serve-img">
+                    <img src={% static 'assets/freeImg/2.jpeg' %} alt="">    
+                </div>
+                </div>
+
+                <hr style="margin:1rem; background-color:grey; height: 0.1rem;">
+
+                <div class="about_container">
+
+                  <div  id="service-side" class="about__side  how-serve-img">
+                    <img src={% static 'assets/freeImg/3.jpeg' %} alt="">
+                </div>
+
+                  <div class="about-info">
+                <h2 class="about__title">Service Details </h2>
+                <span >Our car washing company provides a wide range of services to meet the needs of every customer. Our goal is to ensure that your vehicle looks as good as new, no matter its age or condition. Our services include exterior and interior detailing, hand washing, and waxing.
 
                     Our exterior detailing service includes a thorough wash, polish, and wax to bring out the shine in your vehicle's paint. We use high-quality cleaning products and techniques to remove dirt, grime, and other contaminants that can dull your car's finish. We also offer clay bar treatments to remove embedded contaminants that regular washing can't get rid of.
                     
-                    Our interior detailing service includes a deep cleaning of the entire interior of your vehicle, including the dashboard, seats, and carpets. We use specialized cleaning products and techniques to remove stains, odors, and dirt that can accumulate over time. Our team will leave your vehicle looking and smelling fresh and clean.
-                    
                     We also offer hand washing services for those who prefer a gentle touch on their vehicles. Our hand washing service uses a soft microfiber wash mitt to gently clean your vehicle without scratching the paint.</span>
                
+                    <hr style="width:2rem; background-color: black; height: 0.2rem; margin: 1rem;">
 
+
+                  </div>
+
+                 
+                </div>
+
+                    <hr style="margin:1rem; background-color:grey; height: 0.1rem;">
+           
+
+            <!-- ======= Our Team Section ======= -->
+    <section class="team-container">
+        
+  
+          <div >
+            <h2 class="about__title" >- Our Team - </h2>
+          </div>
+  
+    
+            <div class="member-container">
+            <div class="member">
+             
+                <img  class ="mem-img" src={% static 'assets/img/team-1.jpg' %}  alt="">
+                <h4 class="mem-name">Chris Gayle</h4>
+                <span>Owner, eMechanic <span>
+                <p>
+                  Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                </p>
+                <div  style="margin-left: 2rem"mem-social">
+                    <a href="#"></a><img class="social-logo" src={% static 'assets/img/facebook-logo-24.png' %} alt=""> </a>
+
+                    <a href="#"></a><img class="social-logo" src={% static 'assets/img/whatsapp-logo-24.png' %} alt=""> </a>
+                    <a href="#"></a><img class="social-logo" src={% static 'assets/img/instagram-logo-24.png' %} alt=""> </a>
+                    <a href="#"></a><img class="social-logo" src={% static 'assets/img/twitter-logo-24.png' %} alt=""> </a>
+                </div>
               
-
             </div>
+  
+            
+              <div class="member">
+                <img class ="mem-img" src={% static 'assets/img/team-2.jpg' %}  alt="">
+                <h4 class="mem-name">Sarah Jhinson</h4>
+                <span>Product Manager</span>
+                <p>
+                  Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
+                </p>
+                <div class="mem-social">
+                    <a href="#"></a><img class="social-logo" src={% static 'assets/img/facebook-logo-24.png' %} alt=""> </a>
+                    <a href="#"></a><img class="social-logo" src={% static 'assets/img/whatsapp-logo-24.png' %} alt=""> </a>
+                    <a href="#"></a><img class="social-logo" src={% static 'assets/img/instagram-logo-24.png' %} alt=""> </a>
+                    <a href="#"></a><img class="social-logo" src={% static 'assets/img/twitter-logo-24.png' %} alt=""> </a>
+                    
+                </div>
+              </div>
+            
+  
+           
+              <div class="member">
+                <img class = "mem-img" src={% static 'assets/img/team-3.jpg' %}  alt="">
+                <h4  class = "mem-name">William Anderson</h4>
+                <span>CTO</span>
+                <p>
+                  Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                </p>
+                <div class="mem-social">
+                    <a href="#"></a><img class="social-logo" src={% static 'assets/img/facebook-logo-24.png' %} alt=""> </a>
+
+                    <a href="#"><img class="social-logo" src={% static 'assets/img/whatsapp-logo-24.png' %} alt=""> </a>
+                    <a href="#"><img class="social-logo" src={% static 'assets/img/instagram-logo-24.png' %} alt=""> </a>
+                    <a href="#"><img class="social-logo" src={% static 'assets/img/twitter-logo-24.png' %} alt=""> </a>
+                  
+                </div>
+              </div>
+            
+  
+          </div>
+        
+  
+        </div>
+      </section><!-- End Our Team Section -->
+
+
 
         </section>
 
