--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -656,49 +656,7 @@ background-color: 	#F0F0F0;
 
 
 
-/* =====================About block================== */
-.about__contain {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color:rgb(223, 223, 223);
-  text-align: center;
-  /* margin: 2rem; */
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
 
-.about__logo__img1 {
-  height: 10rem;
-  width: 10rem;
-  border: 2px solid;
-  margin: 3rem  3rem 0 3rem;
-  border-radius: 10rem;
-}
-
-.about__logo__img2 {
-  width: 50%;
-  height: 50%;
-  margin: 1rem;
-
-}
-
-.about__bottom {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  text-align: center;
-  align-items: center;
-  margin: 1rem;
-  padding: 0.3rem;
-}
-
-.bottom__iterms {
-  margin: 0.8rem 0.7rem;
-}
-h2{
-  color: black;
-}
 
 
 /* =========== Contact Us=================== */
@@ -744,134 +702,280 @@ h2{
 
 /* css harshal */
 
-/* home image slider css */
+/* =====================About block================== */
 
-.slider-container{
-  height: 85vh;
-  width : 100%;
+
+.about__title {
+  font-size: var(--h1-font-size);
+  color: var(--title-color);
+  text-align: center;
+  /* margin-bottom: 0.5rem;s */
+  
+  /* margin-top:-100px; */
+  font-family: 'Montserrat';
+  font-size: 2.3rem;
+
+}
+.about_container{
   display: flex;
   justify-content: center;
   align-items: center;
 
 
- 
-  /* background: #1D212B; */
 }
 
-.img-slider{
-  position: relative;
-  width: 800px;
-  height: 450px;
-  /* margin: 10px; */
-  /* background: #1D212B; */
-  margin-top:-80px;
-}
-
-.img-slider .slide{
-  z-index: 1;
-  position: absolute;
-  width: 100%;
-  clip-path: circle(0% at 0 50%);
-}
-
-.img-slider .slide.active{
-  clip-path: circle(150% at 0 50%);
-  transition: 2s;
-  transition-property: clip-path;
-}
-
-.img-slider .slide img{
-  z-index: 1;
-  width: 100%;
-  border-radius: 5px;
-  /* height: 80vh; */
-}
-
-
-.img-slider .navigation{
-  z-index: 2;
-  position: absolute;
+.about__side{
   display: flex;
-  bottom: -70px;
-  left: 50%;
-  transform: translateX(-50%);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color:rgb(223, 223, 223); */
+  text-align: center;
+  margin: 0.5rem;
+  border : 1px dashed black;
+
+  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  height: 25rem;
+  width : 25rem;
+
 }
 
-.img-slider .navigation .btn{
-  background: rgba(255, 255, 255, 0.5);
-  width: 12px;
-  height: 12px;
-  margin: 10px;
+.about__logo__img1 {
+  height: 10rem;
+  width: 10rem;
+  /* border: 2px solid; */
+  margin-bottom: 0.5rem;
   border-radius: 50%;
-  cursor: pointer;
 }
 
-.img-slider .navigation .btn.active{
-  background: #2696E9;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+.about__side p{
+
+  font-size:medium;
+  margin : 1rem;
+  font-weight: bold;
+
 }
 
-@media (max-width: 820px){
 
-    .slider-container{
-        height: 85vh;
-    }
-  .img-slider{
+
+.about-info{
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin: 1rem;
+  padding: 0.1rem;
+  /* border : 1px dashed black; */
+  width : 70rem;
+  height: 25rem;
+  border-radius: 2rem;
+  /* background-color: #EEEEEE; */
+  /* background-color: rgb(232, 231, 231); */
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+}
+
+.about-info span{
+
+  font-size: larger;
+  margin: 0.6rem 0.5rem 0 0.5rem;
+  /* font-weight: lighter; */
+  font-style: italic;
+  /* font-family: 'Montserrat'; */
+
+  
+
+}
+
+.how-serve-img{
+
+  border : none;
+
+}
+
+
+.how-serve-img img{
+
+  height: 25rem;
+  width : 20rem;
+  border-radius: 0.5rem;
+  transition: transform .2s;
+}
+
+.about-info:hover {
+
+  transform: scale(1.01);
+
+}
+
+h2{
+  color: black;
+}
+
+/*--------------------------------------------------------------
+# Our Team
+--------------------------------------------------------------*/
+
+.team-container{
+
+  display : flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  font-style: italic;
+}
+
+.member-container{
+
+  display : flex;
+  align-items: center;
+  justify-content: center;
+  
+
+}
+.member{
+
+  /* border: 1px dashed black; */
+  display : flex;
+  align-items: center;
+  justify-content: center;
+  margin : 1rem;
+  padding : 1rem;
+  border-radius: 1rem;
+  box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
+  flex-direction: column;
+  background-color: rgb(232, 231, 231);
+
+  
+
+
+}
+
+.member p{
+
+      font-size:medium;
+     margin : 0.2rem;
+}
+
+.mem-img{
+
+  height: 10rem;
+  width: 10rem;
+  border-radius: 10rem;
+}
+
+.mem-social{
+
+  display: flex;
+
+
+}
+
+.social-logo{
+
+  height: 1.5rem;
+  width: 1.5rem;
+  margin : 0.5rem;
+  transition: transform .2s;
+
+}
+
+.social-logo:hover {
+
+  transform: scale(1.3);
+
+}
+
+
+
+/* @media screen and (max-width: 420px) {
+  
+
+  
+
+  .about-info span{
+
+    font-size: 15px;
+
+  }
+
+ 
+
+
+  .about__title {
     
+    font-size: 1.5rem;
+  
+  }
+   
+} */
 
-    width: 600px;
-    height: 375px;
+  
+ 
+
+  
+
+@media screen and (max-width: 820px) {
+
+
+  .about__side{
+  
+    height: 25rem;
+    width : 100%;
+    border-radius: 1.5rem;
+  
+  }
+  .member-container{
+
+    
+    flex-direction: column;
   }
 
+  .about_container{
 
+    flex-wrap: wrap;
 
-  .img-slider .navigation{
-    bottom: -15px;
   }
 
-  .img-slider .navigation .btn{
-    width: 10px;
-    height: 10px;
-    margin: 8px;
+  
+
+  .about-info span{
+
+    font-size:small;
+
   }
+
+  #how-side{
+
+    display:none;
+    
+  }
+
+  #service-side{
+
+    display:none;
+
+  }
+
+  .about__title {
+    
+    font-size: 1.5rem;
+  
+  }
+
+  
+
+  
+ 
+
+  
+ 
 }
 
-@media (max-width: 620px){
-
-    .slider-container{
-        height: 58vh;
-    }
-  .img-slider{
-    width: 400px;
-    height: 250px;
-    margin-top: -20px;
-  }
 
 
-  .img-slider .navigation{
-    bottom: -10px;
-  }
 
-  .img-slider .navigation .btn{
-    width: 8px;
-    height: 8px;
-    margin: 6px;
-  }
-}
-
-@media (max-width: 420px){
-
-    .slider-container{
-        height: 45vh;
-    }
-  .img-slider{
-    width: 320px;
-    height: 200px;
-    margin-top: -10px;
-  }
-
-
-  .img-slider .navigation{
-    bottom: -10px;
-  }
-}
