small update in about css

--- a/templates/indexAbout.html
+++ b/templates/indexAbout.html
@@ -141,14 +141,14 @@
             
   
            
-              <div class="member">
+              <div  id="mem3" class="member">
                 <img class = "mem-img" src={% static 'assets/img/team-3.jpg' %}  alt="">
                 <h4  class = "mem-name">William Anderson</h4>
                 <span>CTO</span>
                 <p>
                   Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
                 </p>
-                <div class="mem-social">
+                <div  class="mem-social">
                     <a href="#"></a><img class="social-logo" src={% static 'assets/img/facebook-logo-24.png' %} alt=""> </a>
 
                     <a href="#"><img class="social-logo" src={% static 'assets/img/whatsapp-logo-24.png' %} alt=""> </a>
@@ -160,6 +160,9 @@
             
   
           </div>
+
+          <hr style="width:2rem; background-color: black; height: 0.2rem; margin: 1rem;">
+
         
   
         </div>
