--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -892,7 +892,7 @@ h2{
 
 
 
-/* @media screen and (max-width: 420px) {
+@media screen and (max-width: 420px) {
   
 
   
@@ -901,6 +901,12 @@ h2{
 
     font-size: 15px;
 
+  }
+
+.member-container:last-child{
+
+    margin-bottom: 2.5rem;
+    
   }
 
  
@@ -912,7 +918,7 @@ h2{
   
   }
    
-} */
+}
 
   
  
@@ -966,6 +972,8 @@ h2{
     font-size: 1.5rem;
   
   }
+
+
 
   
 
