css added to contact page

--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -659,46 +659,7 @@ background-color: 	#F0F0F0;
 
 
 
-/* =========== Contact Us=================== */
 
-.contact__upper{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin: auto;
-  align-items: center;
-  /* width: 75%; */
-  padding: 1rem;
-  
-
-
-}
-
-
-.contact__lower{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  margin: auto;
-  margin-bottom: 5rem;
-  /* width: 50%; */
- 
-  
-}
-
-.contact__img{
-  height: 5rem;
-  width: 5rem;
-  padding: 1rem 1rem;
-  transition: transform .2s;
-  
-}
-.contact__img:hover{
-  
-   
-  transform: scale(1.1);
-}
 
 /* css harshal */
 
@@ -784,7 +745,6 @@ background-color: 	#F0F0F0;
   margin: 0.6rem 0.5rem 0 0.5rem;
   /* font-weight: lighter; */
   font-style: italic;
-  /* font-family: 'Montserrat'; */
 
   
 
@@ -813,6 +773,141 @@ background-color: 	#F0F0F0;
 
 h2{
   color: black;
+}
+
+/* =========== Contact Us=================== */
+
+.contact{
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  
+  align-items: center;
+
+
+}
+.contact__upper{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+ 
+  
+  align-items: center;
+  
+  padding: 1rem;
+  
+  
+  background-repeat: no-repeat;
+  background-size: cover ;
+  margin-top:-3rem;
+
+
+
+
+
+}
+
+.upper-side{
+
+  /* border: 2px solid red; */
+  height: 12rem;
+  width: 12rem;
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+ 
+  
+  align-items: center;
+
+
+}
+
+.upper-side img{
+
+  width : 7rem;
+  height : 7rem;
+}
+
+
+
+.help{
+
+  font-size: 3rem;
+  
+  
+  
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  font-family: 'Montserrat';
+  
+  /* flex-direction: column; */
+  
+
+ 
+  
+  align-items: center;
+  
+
+
+
+}
+
+.contact__lower{
+
+  display: flex;
+   justify-content: center;
+   align-items: center;
+   /* border: 2px solid red; */
+   flex-direction: row;
+   margin-top: 0.5rem;
+
+
+}
+
+
+.contact__btn{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* margin: auto; */
+  
+  /* width: 50%; */
+ 
+  
+}
+
+.lower-div{
+
+  /* border: 2px solid red; */
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  margin: 1.5rem;
+  /* width: 13rem; */
+  /* height: 13rem; */
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+}
+
+
+.contact__img{
+  height: 8rem;
+  width: 8rem;
+  /* padding: 1rem 1rem; */
+  transition: transform .2s;
+  
+}
+.contact__img:hover{
+  
+   
+  transform: scale(1.05);
 }
 
 /*--------------------------------------------------------------
@@ -917,6 +1012,37 @@ h2{
     font-size: 1.5rem;
   
   }
+  .contact__lower{
+
+   
+     flex-direction: column;
+     margin-top: -1rem;
+  
+  
+  }
+  .contact__lower:last-child{
+
+   
+     margin-bottom: 2rem;
+  
+  
+  }
+.contact__img{
+
+  width:3rem;
+  height: 3rem;
+}
+
+.lower-div{
+
+  margin:1rem;
+
+}
+
+.help{
+
+  font-size: 1.3rem;
+}
    
 }
 
@@ -972,6 +1098,20 @@ h2{
     font-size: 1.5rem;
   
   }
+
+  .contact__lower{
+
+   
+    flex-direction: column;
+    /* margin-top: -1rem; */
+ 
+ 
+ }
+
+ .help{
+
+  font-size: 1.3rem;
+}
 
 
 
