--- a/templates/indexContact.html
+++ b/templates/indexContact.html
@@ -11,37 +11,82 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href={% static 'assets/css/styles.css' %}>
-    
+
 
     <title>Wash Your Car at your doorstep.</title>
 </head>
 
 <body>
     <!--=============== HEADER ===============-->
-    
+
     {% include 'header.html' %}
 
     <main>
         <!--=============== HOME ===============-->
-        <section class="container section section__height" id="home">
-         </section>
-              
+        <section class="contact section section__height" id="home">
 
-         <div class="contact__upper">
-            <h2>Feel free to contact us!</h2>
-            <img  class="about__logo__img1" src={% static 'assets/img/logo.jpg' %} alt="">
-            <h2 >eMechanic</h2>
-    
-        </div>
-        <a href="https://www.instagram.com/ya_sss_hh/" target="_blank">
-        <div class="contact__lower" >
-        <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-facebook-48.png' %} alt=""> facebook
-        <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-instagram-48.png' %} alt="">instagram
-        <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-whatsapp-60.png' %} alt="">whats App
-        <img class="contact__img" src={% static 'assets/contact-notsure-img/icons8-gmail-logo-48.png' %} alt="">Gmail
-    
-        </div>
-    </a>
+
+
+            <div class="contact__upper">
+                <div class="upper-side">
+                    <img class="about__logo__img1" src={% static 'assets/img/logo.jpg' %} alt="">
+                    <h2>eMechanic</h2>
+                </div>
+
+                <div class="help">
+                    <p>How can we help you ?</p>
+                </div>
+            </div>
+                <div class="contact__lower">
+                <div class="contact__btn">
+                   
+                    <div class="lower-div">
+            <a href="https://www.instagram.com/ya_sss_hh/" target="_blank">
+
+                        <img class="contact__img" src={% static 'assets/img/instagram.png' %}
+                            alt=""> </a>
+                    </div>
+                    <div  class="lower-div">
+
+            <a href="https://www.instagram.com/ya_sss_hh/" target="_blank">
+
+                        <img class="contact__img" src={% static 'assets/img/telephone.png' %}
+                            alt=""></a>
+                    </div>
+                    <div  class="lower-div">
+            <a href="https://www.instagram.com/ya_sss_hh/" target="_blank">
+                <img class="contact__img" src={% static 'assets/img/whatsapp.png' %}
+                            alt=""></a>
+                    </div>
+                    </div>
+                    
+
+                
+
+                <div class="contact__btn">
+                    
+                    <div  class="lower-div">
+            <a href="https://www.instagram.com/ya_sss_hh/" target="_blank">
+                <img class="contact__img" src={% static 'assets/img/facebook.png' %} alt=""></a>
+                    </div>
+                    <div  class="lower-div">
+            <a href="https://www.instagram.com/ya_sss_hh/" target="_blank">
+                <img class="contact__img" src={% static 'assets/img/email.png' %} alt=""></a>
+                    </div>
+                    <div  class="lower-div">
+            <a href="https://www.instagram.com/ya_sss_hh/" target="_blank">
+                <img class="contact__img" src={% static 'assets/img/twitter.png' %} alt=""></a>
+                    </div>
+                
+                </div>
+                
+                </div>
+          <hr style="width:2rem; background-color: black; height: 0.2rem; margin: 1rem;">
+
+                
+
+                
+           
 
 
         </section>
