service section updated

--- a/templates/indexAbout.html
+++ b/templates/indexAbout.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="x-icon" href={% static 'assets/img/logo.jpg' %}>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
 
 
@@ -35,7 +36,7 @@
                 </div>
             
             <div class="about-info">
-                <h2 class="about__title">About us</h2>
+                <h2 class="section__title">About us</h2>
                 <span>Welcome to our car washing company! We are a team of dedicated professionals who have a passion for providing the best car washing services to our customers. Our company was founded with a mission to offer exceptional quality and convenience to car owners who want to maintain the appearance of their vehicles.
 
                     At our company, we understand the importance of having a clean car. Not only does it enhance the overall look of your vehicle, but it also helps to maintain its value. With this in mind, we have designed a range of car washing services that cater to the needs of all types of vehicles. Whether you drive a small car, a luxury SUV, or a commercial vehicle, we have the expertise to ensure that your vehicle looks its best.</span>
@@ -52,7 +53,7 @@
 
                <div class="about-info"> 
 
-                <h2 class="about__title">How we works ?</h2>
+                <h2 class="section__title">How we works ?</h2>
                 <span class="bottom__iterms">At our car washing company, we understand that our customers lead busy lives and may not always have the time to visit a car wash. This is why we offer doorstep car washing services, where we come to your location and wash your car on-site. Here is how we do car washing at your doorstep:
 
                     First, you can book an appointment for our doorstep car washing service by contacting us via phone, email, or our website. We will schedule a convenient time for our team to come to your location.
@@ -62,7 +63,7 @@
                  
                   </div>
 
-                  <div  id="how-side" class="about__side how-serve-img">
+                  <div   id="how-side" class="about__side how-serve-img">
                     <img src={% static 'assets/freeImg/2.jpeg' %} alt="">    
                 </div>
                 </div>
@@ -76,7 +77,7 @@
                 </div>
 
                   <div class="about-info">
-                <h2 class="about__title">Service Details </h2>
+                <h2 class="section__title">Service Details </h2>
                 <span >Our car washing company provides a wide range of services to meet the needs of every customer. Our goal is to ensure that your vehicle looks as good as new, no matter its age or condition. Our services include exterior and interior detailing, hand washing, and waxing.
 
                     Our exterior detailing service includes a thorough wash, polish, and wax to bring out the shine in your vehicle's paint. We use high-quality cleaning products and techniques to remove dirt, grime, and other contaminants that can dull your car's finish. We also offer clay bar treatments to remove embedded contaminants that regular washing can't get rid of.
@@ -99,7 +100,7 @@
         
   
           <div >
-            <h2 class="about__title" >- Our Team - </h2>
+            <h2 class="section__title" >- Our Team - </h2>
           </div>
   
     
@@ -107,10 +108,11 @@
             <div class="member">
              
                 <img  class ="mem-img" src={% static 'assets/img/team-1.jpg' %}  alt="">
+              
                 <h4 class="mem-name">Chris Gayle</h4>
                 <span>Owner, eMechanic <span>
                 <p>
-                  Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aliquid dicta exercitationem assumenda.
                 </p>
                 <div  style="margin-left: 2rem"mem-social">
                     <a href="#"></a><img class="social-logo" src={% static 'assets/img/facebook-logo-24.png' %} alt=""> </a>
@@ -128,7 +130,7 @@
                 <h4 class="mem-name">Sarah Jhinson</h4>
                 <span>Product Manager</span>
                 <p>
-                  Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum non voluptas molestias illum.
                 </p>
                 <div class="mem-social">
                     <a href="#"></a><img class="social-logo" src={% static 'assets/img/facebook-logo-24.png' %} alt=""> </a>
@@ -146,7 +148,7 @@
                 <h4  class = "mem-name">William Anderson</h4>
                 <span>CTO</span>
                 <p>
-                  Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi aperiam sapiente sit impedit.
                 </p>
                 <div  class="mem-social">
                     <a href="#"></a><img class="social-logo" src={% static 'assets/img/facebook-logo-24.png' %} alt=""> </a>
