--- a/templates/indexContact.html
+++ b/templates/indexContact.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="x-icon" href={% static 'assets/img/logo.jpg' %}>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
 
 
