--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -742,9 +742,9 @@ background-color: 	#F0F0F0;
 .about-info span{
 
   font-size: larger;
-  margin: 0.6rem 0.5rem 0 0.5rem;
+  margin: 0.6rem 0.9rem 0 0.9rem;
   /* font-weight: lighter; */
-  font-style: italic;
+  /* font-style: italic; */   
 
   
 
@@ -760,7 +760,7 @@ background-color: 	#F0F0F0;
 .how-serve-img img{
 
   height: 25rem;
-  width : 20rem;
+  width : 25rem;
   border-radius: 0.5rem;
   transition: transform .2s;
 }
@@ -1043,7 +1043,7 @@ h2{
 
   font-size: 1.3rem;
 }
-   
+      
 }
 
   
@@ -1125,5 +1125,82 @@ h2{
 }
 
 
+/* home updates */
+
+@media screen and (min-width: 820px) {
+.shop__list{
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-evenly; */
+
+}
+.shop__flex{
+  width: 40%;
+}
+.shop__flex__shop{
+  width: 40% !important;
+}
 
 
+}
+
+
+.about-info > span{
+
+  text-align: justify;
+  padding: 0.2rem;
+
+}
+
+
+.newServiceBlock{
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07), 0 2px 4px rgba(0,0,0,0.07), 0 4px 8px rgba(0,0,0,0.07), 0 8px 16px rgba(0,0,0,0.07), 0 16px 32px rgba(0,0,0,0.07), 0 32px 64px rgba(0,0,0,0.07);
+  display: flex;
+  justify-content: space-between;
+  /* height: 25rem; */
+  height: 20rem;
+  width: 85%; 
+  margin: 2rem auto;
+  /* border: 1px solid rgba(128, 128, 128, 0.603); */
+  border-radius: 10px;
+  overflow: hidden;
+
+}
+.serviceImgLeft{
+  width: 40%;
+  /* height: fit-content; */
+
+}
+.serviceDataRight{
+  display: flex;
+  flex-direction: column;
+  height: fit;
+  width: 50%;
+  padding: 0.2rem;
+}
+.serviceImgLeft > img{
+  height: 20rem;
+}
+
+.serviceDataRight > a {
+  margin: auto;
+}
+
+
+@media screen and (max-width: 820px) {
+
+  .newServiceBlock{
+    height: fit-content;
+    flex-direction: column;
+    width: 100%;
+    align-content: center;
+    margin: 3rem 0;
+
+  }
+  .serviceDataRight{
+    width: 100%;
+    text-align: center;
+    align-content: center;
+    padding: 0.5rem 0.3rem;
+  }
+}
